# esp_mcp_bridge

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  ESP32_MCP_BRIDGE_COMPREHENSIVE_GUIDE.md  QUICK_START.md  README.md
config/: default.yaml
deployment/: docker-compose.yml  mosquitto.conf
docs/: enhanced-features.md  setup_guide.md
firmware/: README.md
firmware/components/esp_mcp_bridge/: CMakeLists.txt  Kconfig
firmware/components/esp_mcp_bridge/include/: esp_mcp_bridge.h  mcp_device.h
firmware/components/esp_mcp_bridge/src/: esp_mcp_bridge.c  esp_mcp_device.c
server/: CHAT_DEMO_README.md  Dockerfile  FASTMCP_CHAT_README.md  MQTT_CONFIGURATION_GUIDE.md  README.md  REMOTE_SETUP_GUIDE.md  SYSTEM_STATUS.md  SYSTEM_TEST_RESULTS.md  chat_with_devices.py  cleanup_database.py  debug_mqtt_flow.py  fastmcp_bridge_server.py  fastmcp_chat.py  fastmcp_client_example.py  manual_test.py  mosquitto.conf  remote_fastmcp_chat.py  requirements-chat.txt  requirements-dev.txt  requirements-remote.txt  requirements.txt  run_system_test.py  setup.py  start_chat_demo.py  start_fastmcp_chat.py  test_chat_setup.py  test_fastmcp_integration.py  test_fastmcp_simple.py  test_mcp_connection.py  test_mcp_server.py  test_remote_connection.py  test_running_system.py  test_sql_query.py  test_sql_simple.py
server/config/: default.yaml  development.yaml  production.yaml.example
server/examples/: TESTING.md  basic_client.py  custom_tools.py  dashboard.py  example_client.py  legacy_server.py  mock_device_config.yaml  mock_esp32_device.py  system_integration_test.py  test_with_mock_devices.py
(+21 files in other folders)
